--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -4,7 +4,72 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-frontend</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Sasidhar Veerni - Freelance Full-Stack Developer | ReactJS, SpringBoot, Node.js, AI Solutions</title>
+    <meta name="title" content="Sasidhar Veerni - Freelance Full-Stack Developer | ReactJS, Node.js, AI Solutions" />
+    <meta name="description" content="Hire Sasidhar Veerni - Associate Software Engineer at Tech Mahindra. Expert freelance developer delivering premium ReactJS, Node.js, and AI-powered web applications at competitive rates. 3+ successful projects delivered." />
+    <meta name="keywords" content="Sasidhar Veerni, freelance developer, budget freelancer, ReactJS developer, Node.js developer, AI developer, full-stack developer India, freelance web developer Hyderabad, Tech Mahindra engineer, affordable web development, freelance developer Hyderabad" />
+    <meta name="author" content="Sasidhar Veerni" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <link rel="canonical" href="https://sasidhar-veerni.vercel.app/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sasidhar-veerni.vercel.app/" />
+    <meta property="og:title" content="Sasidhar Veerni - Freelance Full-Stack Developer" />
+    <meta property="og:description" content="Expert freelance developer specializing in ReactJS, Node.js, AI solutions. 3+ successful projects. Competitive rates. Available for hire in Hyderabad, India." />
+    <meta property="og:image" content="https://ui-avatars.com/api/?name=Sasidhar+Veerni&size=1200&background=7c3aed&color=fff&bold=true&font-size=0.4" />
+
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://sasidhar-veerni.vercel.app/" />
+    <meta property="twitter:title" content="Sasidhar Veerni - Freelance Full-Stack Developer" />
+    <meta property="twitter:description" content="Expert freelance developer specializing in ReactJS, Node.js, AI solutions" />
+    <meta property="twitter:image" content="https://ui-avatars.com/api/?name=Sasidhar+Veerni&size=1200&background=7c3aed&color=fff&bold=true&font-size=0.4" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Sasidhar Veerni",
+      "url": "https://sasidhar-veerni.vercel.app/",
+      "image": "https://ui-avatars.com/api/?name=Sasidhar+Veerni&size=600&background=7c3aed&color=fff&bold=true",
+      "jobTitle": "Associate Software Engineer & Freelance Full-Stack Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Tech Mahindra"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Hyderabad",
+        "addressRegion": "Telangana",
+        "addressCountry": "IN"
+      },
+      "description": "Full-stack developer specializing in ReactJS, Node.js, AI solutions, and premium web applications. Available for freelance projects.",
+      "knowsAbout": ["React", "Spring Boot", "Node.js", "MongoDB", "AI/ML", "NLP", "AWS", "Firebase", "Full-Stack Development", "Web Development"],
+      "sameAs": [
+        "https://www.linkedin.com/in/sasidhar-v/",
+        "https://github.com/Sasidharveerni"
+      ],
+      "hasOccupation": {
+        "@type": "Occupation",
+        "name": "Freelance Web Developer",
+        "occupationLocation": {
+          "@type": "City",
+          "name": "Hyderabad"
+        }
+      }
+    }
+    </script>
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   <body>
     <div id="root"></div>
