--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -22,6 +22,7 @@
     <meta property="og:title" content="Sasidhar Veerni - Freelance Full-Stack Developer" />
     <meta property="og:description" content="Expert freelance developer specializing in ReactJS, Node.js, AI solutions. 3+ successful projects. Competitive rates. Available for hire in Hyderabad, India." />
     <meta property="og:image" content="https://ui-avatars.com/api/?name=Sasidhar+Veerni&size=1200&background=7c3aed&color=fff&bold=true&font-size=0.4" />
+    <meta name="google-site-verification" content="google676f947c6649bd07.html" />
 
 
     <!-- Twitter -->
